Full test added

--- a/index.html
+++ b/index.html
@@ -39,26 +39,32 @@
     <h1>D.EL.ED Preparation 2025</h1>
     <div class="announcement-bar">
         <div class="scroll-text">
-            Note: New <em>play quiz</em> has added. Complet it before 31 May otherwise it will automatically expire.
+            Note: Full syllabus test will be Available from 24-05-25 12:00AM to 25-05-25 11:59PM.
         </div>
     </div>
     <div class="test subject-container">
         <h3>Prectics Test</h3>
         <ul>
-            <li> <strong>Trial
-                    Test</strong>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <!-- <li> Trial
+                    Test&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <button onclick="window.location.href;" style="background-color: gray;">
                     Start Test
                 </button>
+            </li> -->
+            <li><strong>Full Test</strong>
+                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button
+                    onclick="window.location.href='https://www.classmarker.com/online-test/start/?quiz=pjp682dbc1f8c32a';">
+                    Start Test <span class="new-badge"></span>
+                </button>
             </li>
-            <li>Full Test
-                &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button>Upcomming...</button>
+            <li style="color: white;">
+                Test Password: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#43211234
             </li>
             <li>Hindi (Small Test) &nbsp;&nbsp;&nbsp;<button>Upcomming...</button></li>
-            <li>GK-GS (Small Test) <button
+            <!-- <li>GK-GS (Small Test) <button
                     onclick="window.location.href='https://www.classmarker.com/online-test/start/?quiz=p47682c538269b9e';">
                     Start Test <span class="new-badge"></span>
-                </button></li>
+                </button></li> -->
         </ul>
     </div>
     <div class="box">
