new course added

--- a/index.html
+++ b/index.html
@@ -230,9 +230,18 @@
 
                     <hr>
                     <div class="topic">
-                        <p>14. *सामान्य ज्ञान Practice set _ Amitsir <span class="new-badge">New</span></p>
+                        <p>14. *सामान्य ज्ञान Practice set _ Amitsir </p>
                         <div class="topic-links">
                             <a href="https://drive.google.com/file/d/14w48OHMFVnQ-eZ9yRVKx3Ptxz4b9Hzww/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
+<div class="topic">
+                        <p>15. GK & GS संपूर्ण Revision by Amitsir <span class="new-badge">New</span></p>
+                        <div class="topic-links">
+                            <a href="https://drive.google.com/file/d/1yrtuFQ-fKoLprSD8duMDYkadcdKGR-Qf/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                             <a  target="_blank" rel="noopener noreferrer">---</a>
                             <a  target="_blank" rel="noopener noreferrer">---</a>
                         </div>
@@ -298,6 +307,26 @@
                         </div>
                     </div>
                     <hr>
+                    <div class="topic">
+                        <p>4. Math Mock Test _ Previous year c1 <span class="new-badge">New</span></p>
+                        <div class="topic-links">
+                            <a href="https://drive.google.com/file/d/1uVHh8qGMrnU3glVtX2gJlAdW6kuO4LI8/view?usp=drive_link"
+                                target="_blank" rel="noopener noreferrer">Notes/Questions</a>
+                            <a   rel="noopener noreferrer">---</a>
+                            <a target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="topic" style="display: none;">
+                        <p>Topic</p>
+                        <div class="topic-links">
+                            <a href="https://drive.google.com/file/d/1uVHh8qGMrnU3glVtX2gJlAdW6kuO4LI8/view?usp=drive_link"
+                                target="_blank" rel="noopener noreferrer">Notes/Questions</a>
+                            <a   rel="noopener noreferrer">---</a>
+                            <a target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
                 </div>
             </div>
 
@@ -335,7 +364,7 @@
                     </div>
                     <hr>
                     <div class="topic">
-                        <p>Hindi Practice Set 25_Pavan Sir <span class="new-badge">New</span></p>
+                        <p>3. Hindi Practice Set 25_Pavan Sir </p>
                         <div class="topic-links">
                             <a href="https://drive.google.com/file/d/1dC1QSW3fTTX3va6ZPHVF3KV_da-2q-0M/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                             <a  target="_blank" rel="noopener noreferrer">---</a>
@@ -344,7 +373,7 @@
                     </div>
                     <hr>
                     <div class="topic">
-                        <p>Hindi Practice Set 26_Pavan Sir <span class="new-badge">New</span></p>
+                        <p>4. Hindi Practice Set 26_Pavan Sir </p>
                         <div class="topic-links">
                             <a href="https://drive.google.com/file/d/1c_yYUQ0jA9xdMUHFGe8kXFlTgDfQAUVh/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                             <a  target="_blank" rel="noopener noreferrer">---</a>
@@ -352,23 +381,16 @@
                         </div>
                     </div>
                     <hr>
-                    <div class="topic" style="display: none;">
-                        <p>Topic name</p>
+                    <div class="topic" >
+                        <p>5. Hindi Practice Set 27_ Pavan Sir <span class="new-badge">New</span></p>
                         <div class="topic-links">
-                            <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a href="https://drive.google.com/file/d/1c-TLQki8aS6y5YC5FiyN3CjxciMl1Ppo/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                             <a  target="_blank" rel="noopener noreferrer">---</a>
                             <a  target="_blank" rel="noopener noreferrer">---</a>
                         </div>
                     </div>
                     <hr>
-                    <div class="topic" style="display: none;">
-                        <p>Topic name</p>
-                        <div class="topic-links">
-                            <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
-                            <a  target="_blank" rel="noopener noreferrer">---</a>
-                            <a  target="_blank" rel="noopener noreferrer">---</a>
-                        </div>
-                    </div>
+                    
                     <hr>
                 </div>
             </div>
@@ -383,7 +405,7 @@
                 <div class="topics-container">
                     <hr class="hr-top">
                     <div class="topic">
-                        <p>1. English Practice Set_NageshSir <span class="new-badge">New</span></p>
+                        <p>1. English Practice Set_NageshSir </p>
                         <div class="topic-links">
                             <a href="https://drive.google.com/file/d/1eADMES-JvaIB6gZM20loD-NmTGn3jfUJ/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                             <a  target="_blank" rel="noopener noreferrer">---</a>
@@ -392,7 +414,7 @@
                     </div>
                     <hr>
                     <div class="topic">
-                        <p>2. English Practice Set(2)_Nagesh Sir <span class="new-badge">New</span></p>
+                        <p>2. English Practice Set(2)_Nagesh Sir </p>
                         <div class="topic-links">
                             <a href="https://drive.google.com/file/d/1ZOoV2LdL2-CzHb04roUc91C2g5PDgJ_C/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
                             <a  target="_blank" rel="noopener noreferrer">---</a>
@@ -479,11 +501,20 @@
                     </div>
                     <hr>
                     <div class="topic">
-                        <p>Sunday Mock test Science+English Abadat Sir </p>
+                        <p>5. Sunday Mock test Science+English Abadat Sir </p>
                         <div class="topic-links">
                             <a href="https://drive.google.com/file/d/1y_VME6tg9k6-XtrJJA6OPEtHSmi4htp1/view?usp=drive_link" target="_blank" rel="noopener noreferrer">All Questions</a>
                             <a  target="_blank" rel="noopener noreferrer">---</a>
                             <a  target="_blank" rel="noopener noreferrer">---</a>
+                        </div>
+                    </div>
+                    <hr>
+                    <div class="topic">
+                        <p>6. Science+English Day 8 _ Most Vvi <span class="new-badge">New</span></p>
+                        <div class="topic-links">
+                            <a href="https://drive.google.com/file/d/18MqcTa95Uz6tE1rA8G-d8x3Ks-k6VgIH/view?usp=drive_link" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">---</a>
+                            <a target="_blank" rel="noopener noreferrer">---</a>
                         </div>
                     </div>
                     <hr>
@@ -496,6 +527,15 @@
                         </div>
                     </div>
                     <hr>
+                    <div class="topic" style="display: none;">
+                        <p>Topic name</p>
+                        <div class="topic-links">
+                            <a href="" target="_blank" rel="noopener noreferrer">Notes/All questions</a>
+                            <a  target="_blank" rel="noopener noreferrer">Quiz</a>
+                            <a target="_blank" rel="noopener noreferrer">Play</a>
+                        </div>
+                    </div>
+                    <hr>                    
                 </div>
             </div>
 
