--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <h1>D.EL.ED Preparation 2025</h1>
 
             <table id="updates-table" border="1" style="width: 100%;">
-  <tr><th>Update time::</th><th>Description:</th></tr>
+  <tr><th>Update time::</th><th>Description::</th></tr>
 </table>
 
 <script>
