New test platform added

--- a/index.html
+++ b/index.html
@@ -66,15 +66,17 @@
             Note: Full syllabus test will be Available from 24-05-25 12:00AM to 25-05-25 11:59PM.
         </div>
     </div>
-    <div class="test subject-container">
-        <h3>Prectics Test</h3>
-        <ul style="display: none;">
-            <!-- <li> Trial
+    <div class="test subject-container" style="display: flex; justify-content: space-between; align-items: center;" >
+        <h3 style="margin: 0;">Prectics Test</h3>
+        <a href="https://answer-ace-lab.vercel.app/">
+        <button>Go To Test</button> </a>
+        <!-- <ul>
+            <li> Trial
                     Test&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                 <button onclick="window.location.href;" style="background-color: gray;">
                     Start Test
                 </button>
-            </li> -->
+            </li>
             <li><strong>Full Test</strong>
                 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button
                     onclick="window.location.href='https://www.classmarker.com/online-test/start/?quiz=pjp682dbc1f8c32a';">
@@ -85,11 +87,11 @@
                 Test Password: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;#43211234
             </li>
             <li>Hindi (Small Test) &nbsp;&nbsp;&nbsp;<button>Upcomming...</button></li>
-            <!-- <li>GK-GS (Small Test) <button
+            <li>GK-GS (Small Test) <button
                     onclick="window.location.href='https://www.classmarker.com/online-test/start/?quiz=p47682c538269b9e';">
                     Start Test <span class="new-badge"></span>
-                </button></li> -->
-        </ul>
+                </button></li>
+        </ul> -->
     </div>
     <div class="select-container">
         <label for="category">Select Subject: </label>
