test platform link updated to nkc-test

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
     <div class="test subject-container" style="display: flex; justify-content: space-between; align-items: center;" >
         <h3 style="margin: 0;">Prectics Test</h3>
-        <a href="https://answer-ace-lab.vercel.app/">
+        <a href="https://nkc-test.vercel.app/">
         <button>Go To Test</button> </a>
         <!-- <ul>
             <li> Trial
