--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
                 </button></li>
         </ul> -->
     </div>
+    <div class="test subject-container" style="display: flex; justify-content: space-between; align-items: center;">
+            <h3 style="margin: 0;">Selected list</h3>
+        <a href="https://www.google.com/maps/d/edit?mid=1EUS2P3x7FcH8qBHj6gC7gXv0FgWc530&usp=sharing/">
+        <button>View Map</button> </a>
+    </div>
+
     <div class="select-container">
         <label for="category">Select Subject: </label>
         <select name="category" id="category" class="category">
