--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
         <a href="https://www.google.com/maps/d/edit?mid=1EUS2P3x7FcH8qBHj6gC7gXv0FgWc530&usp=sharing/">
         <button>View Map</button> </a>
     </div>
+    <div class="map-container" style=" margin: 2px;">
+        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EUS2P3x7FcH8qBHj6gC7gXv0FgWc530&ehbc=2E312F" width="640" height="480"></iframe>
+    </div>
 
     <div class="select-container">
         <label for="category">Select Subject: </label>
