--- a/index.html
+++ b/index.html
@@ -93,15 +93,23 @@
                 </button></li>
         </ul> -->
     </div>
+    
     <div class="test subject-container" style="display: flex; justify-content: space-between; align-items: center;">
             <h3 style="margin: 0;">Selected list</h3>
-        <a href="https://www.google.com/maps/d/edit?mid=1EUS2P3x7FcH8qBHj6gC7gXv0FgWc530&usp=sharing/">
-        <button>View Map</button> </a>
+        <a href="https://drive.google.com/file/d/1M4OioxRNb0GNoyDG_BUTcdTSfMiOeTE2/view?usp=sharing">
+        <button>View PDF</button> </a>
     </div>
-    <div class="map-container" style=" margin: 2px;">
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=1EUS2P3x7FcH8qBHj6gC7gXv0FgWc530&ehbc=2E312F" width="640" height="480"></iframe>
+    <div class="test subject-container" style="display: flex; justify-content: space-between; align-items: center;">
+            <h3 style="margin: 0;">Full Map</h3>
+        <a href="https://www.google.com/maps/d/edit?mid=1EUS2P3x7FcH8qBHj6gC7gXv0FgWc530&usp=sharing">
+        <button>Open</button> </a>
     </div>
-
+    <div class="test subject-container">
+    <div class="responsive-iframe-container" style="overflow-y: hidden;">
+        <iframe src="https://www.google.com/maps/d/embed?mid=1EUS2P3x7FcH8qBHj6gC7gXv0FgWc530&ehbc=2E312F&noprof=1" width="640" height="480"></iframe>
+        
+    </div>
+</div>
     <div class="select-container">
         <label for="category">Select Subject: </label>
         <select name="category" id="category" class="category">
